--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
    height: 90vh;
 }
 
-#container {
+.container {
    display: grid;
    grid-template-columns: 100px 100px 100px;
    grid-template-rows: 100px 100px 100px;
